--- a/blog-service/ingress.yaml
+++ b/blog-service/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
-    - host: javatechie.com
+    - host: localhost
       http:
         paths:
           - path: "/course(/|$)(.*)"
